--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "jest"
+  },
   "author": "",
   "license": "",
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^22.4.3"
+  },
   "dependencies": {}
 }
